--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Report/6183c717de362886b48b32c4"]
 	path = Report/6183c717de362886b48b32c4
 	url = https://git.overleaf.com/6183c717de362886b48b32c4
+[submodule "LatexReport"]
+	path = LatexReport
+	url = https://git.overleaf.com/6183c717de362886b48b32c4
