--- a/.github/workflows/push_to_overleaf.yml
+++ b/.github/workflows/push_to_overleaf.yml
@@ -7,7 +7,7 @@ name: push_to_overleaf
 on:
   push:
     branches:
-      - 'main'
+      - 'master'
 
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
