--- a/.github/workflows/push_to_overleaf.yml
+++ b/.github/workflows/push_to_overleaf.yml
@@ -22,6 +22,8 @@ jobs:
     # Runs a single command using the runners shell
     - name: Push directory to another repository
       uses: cpina/github-action-push-to-another-repository@v1.4.1
+      env:
+          API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
       with:
         # Source directory from the origin directory
         source-directory: PreliminaryAirframe/Figures/
