--- a/.github/workflows/push_to_overleaf.yml
+++ b/.github/workflows/push_to_overleaf.yml
@@ -21,14 +21,15 @@ jobs:
     steps:
     # Runs a single command using the runners shell
       - uses: actions/checkout@v2
-
+        with:
+          fetch-depth: 0
       - name: Push directory to another repository
         uses: cpina/github-action-push-to-another-repository@v1.4.1
         env:
             API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
         with:
           # Source directory from the origin directory
-          source-directory: 'AVD/PreliminaryReport/Figures/'
+          source-directory: PreliminaryAirframe/Figures/
           # Name of the destination username/organization
           destination-github-username: 'kiran-desilva'
           # Destination repository
@@ -36,7 +37,6 @@ jobs:
           # Email for the git commit
           user-email: kd619@ic.ac.uk
           # Github server
-  #         github-server: https://git.overleaf.com/
           commit-message: pushed_figures
           target-directory: Media/AutoPushFigures
           target-branch: main
