--- a/.github/workflows/push_to_overleaf.yml
+++ b/.github/workflows/push_to_overleaf.yml
@@ -29,7 +29,7 @@ jobs:
             API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
         with:
           # Source directory from the origin directory
-          source-directory: PreliminaryAirframe/Figures/
+          source-directory: PreliminaryAirframe/
           # Name of the destination username/organization
           destination-github-username: 'kiran-desilva'
           # Destination repository
@@ -37,27 +37,10 @@ jobs:
           # Email for the git commit
           user-email: kd619@ic.ac.uk
           # Github server
-          commit-message: pushed_figures
-          target-directory: Media/AutoPushFigures
+          commit-message: AVD repo update
+          target-directory: Media/AVD_REPO_AUTOPUSH
           target-branch: main
           
-      - name: Push code
-        uses: cpina/github-action-push-to-another-repository@v1.4.1
-        env:
-            API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
-        with:
-          # Source directory from the origin directory
-          source-directory: PreliminaryAirframe/**.m
-          # Name of the destination username/organization
-          destination-github-username: 'kiran-desilva'
-          # Destination repository
-          destination-repository-name: AVD_PreliminaryReport
-          # Email for the git commit
-          user-email: kd619@ic.ac.uk
-          # Github server
-          commit-message: pushed_code
-          target-directory: MatlabCode/AutoPushCode
-          target-branch: main
  
     
         
