--- a/PreliminaryAirframe/.gitignore
+++ b/PreliminaryAirframe/.gitignore
@@ -1,2 +1,7 @@
 test_weights_2.mat
 test_weights_3.mat
+fuselageOptimizerOptimal.mat
+fuselageOptimizerOptimalGlobalSearch.mat
+fuselageMinWeightData.mat
+fuselageOptimizerOutput.mat
+fuselageStructure.mat
