--- a/PreliminaryAirframe/.gitignore
+++ b/PreliminaryAirframe/.gitignore
@@ -1,7 +1,9 @@
 test_weights_2.mat
 test_weights_3.mat
 fuselageOptimizerOptimal.mat
+fuselageOptimizerOptimal2.mat
 fuselageOptimizerOptimalGlobalSearch.mat
 fuselageMinWeightData.mat
 fuselageOptimizerOutput.mat
 fuselageStructure.mat
+
