final fuselage configuration

--- a/PreliminaryAirframe/.gitignore
+++ b/PreliminaryAirframe/.gitignore
@@ -5,5 +5,6 @@ fuselageOptimizerOptimal2.mat
 fuselageOptimizerOptimalGlobalSearch.mat
 fuselageMinWeightData.mat
 fuselageOptimizerOutput.mat
+fuselageOptimizerFinal.mat
 fuselageStructure.mat
 
